src/app/app.component.scss
main {
  width: 100%;
  height: 100%;
}

.background {
  position: fixed;
  inset: 0;
  object-fit: cover;
  opacity: 0.3;
}

.content {
  position: fixed;
  z-index: 1;
  inset: 0;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  text-align: center;
  margin-top: 0;
  margin: 120px 0 40px 0;
  font-size: 40px;
  font-weight: 700;
}

.description {
  font-size: 20px;
  color: var(--text-primary);
  text-align: center;
  max-width: 800px;
  margin: 0 auto 40px;
}

.primary-button {
  display: block;
  margin: 0 0 40px;
  border: 0;
  cursor: pointer;
  background-color: var(--primary);
  color: var(--text-dark);
  border-radius: 8px;
  padding: 12px 16px;
  font-size: 18px;
  transition: 0.3s all;
}

.result {
  border-radius: 16px;
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 16px;
  width: 250px;
  height: 300px;
  transition: 0.3s all;
}

.message {
  text-align: center;

  &.error {
    color: var(--error);
    max-width: 220px;
  }
}

.pin-link {
  text-decoration: none;
  color: var(--text-dark);
  text-align: center;
}

.pin-thumbnail {
  border-radius: 16px;
}

